--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,8 +29,11 @@ h1 {
 
 .App {
     position: relative;
+    display: flex;
     padding: 0px 50px;
     min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .text-content-container {
