--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,12 @@ h1 {
     align-items: center;
 }
 
+.blank {
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
 .add,
 .remove {
     cursor: pointer;
@@ -79,12 +85,25 @@ h1 {
     justify-content: center;
 }
 
+.cart {
+    position: absolute;
+    width: 250px;
+    border: 1px solid black;
+    text-align: center;
+    left: -100px;
+    top: 49px;
+}
+
 .nav-icons {
     display: flex;
     list-style: none;
     align-items: center;
     justify-content: center;
     gap: 20px;
+
+    :nth-child(1) {
+        position: relative;
+    }
 }
 
 .shopping-cart {
