--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,10 @@ h1 {
   width: 80%;
 }
 
+.cart-img {
+  width: 50px;
+}
+
 .cart-buttons {
   display: flex;
   gap: 20px;
@@ -204,4 +208,5 @@ h1 {
   border: none;
   background-color: #F07C3A;
   color: white;
+  cursor: pointer;
 }/*# sourceMappingURL=styles.css.map */
