--- a/src/styles.css
+++ b/src/styles.css
@@ -145,6 +145,11 @@ h1 {
 .half {
   width: 50%;
 }
+@media only screen and (max-width: 500px) {
+  .half {
+    width: 100%;
+  }
+}
 
 .carousel .thumbs {
   display: flex;
@@ -152,9 +157,20 @@ h1 {
   padding: 0px;
 }
 
+@media only screen and (max-width: 500px) {
+  .mobile-hidden {
+    display: none;
+  }
+}
+
 .main-img {
   width: 70%;
   border-radius: 20px;
+}
+@media only screen and (max-width: 500px) {
+  .main-img {
+    width: 100%;
+  }
 }
 
 .main-content {
@@ -163,6 +179,11 @@ h1 {
   justify-content: center;
   align-items: center;
   gap: 20px;
+}
+@media only screen and (max-width: 500px) {
+  .main-content {
+    flex-direction: column;
+  }
 }
 
 .thumbnail {
