--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,11 @@ h1 {
   gap: 20px;
   width: 80%;
 }
+@media only screen and (max-width: 500px) {
+  .text-content-container {
+    padding: 20px;
+  }
+}
 
 .cart-text-price {
   text-align: left;
