--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,10 @@ h1 {
     flex-direction: column;
     gap: 20px;
     width: 80%;
+
+    @media only screen and (max-width: 500px) {
+        padding: 20px;
+      }
 }
 
 .cart-text-price {
