--- a/src/styles.css
+++ b/src/styles.css
@@ -130,6 +130,25 @@ h1 {
   left: -120px;
   top: 50px;
   padding: 10px;
+  background-color: #fff;
+  z-index: 1;
+}
+@media only screen and (max-width: 500px) {
+  .cart {
+    position: absolute;
+    width: 80%;
+    border: 1px solid black;
+    text-align: center;
+    left: 0;
+    top: 122px;
+    padding: 10px;
+    background-color: #fff;
+    z-index: 1;
+    right: 0;
+    border: none;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .nav-icons {
