--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,14 @@ h1 {
     color: white;
 }
 
+.price-master-container {
+    @media only screen and (max-width: 500px) {
+        display: flex;
+        align-items: center;
+        gap: 30px;
+    }
+}
+
 .overlayImg {
     width: 100%;
 }
