--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,6 +117,9 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    @media only screen and (max-width: 500px) {
+        padding: 5px 20px;
+      }
 }
 
 .nav-items {
@@ -126,6 +129,10 @@ h1 {
     gap: 20px;
     align-items: center;
     justify-content: center;
+
+    @media only screen and (max-width: 500px) {
+        padding: 0px;
+      }
 }
 
 .cart {
