--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,9 @@ h1 {
 }
 
 .price-master-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     @media only screen and (max-width: 500px) {
         display: flex;
         align-items: center;
