--- a/src/styles.css
+++ b/src/styles.css
@@ -151,11 +151,11 @@ h1 {
   width: 250px;
   border: 1px solid black;
   text-align: center;
-  left: -120px;
-  top: 50px;
+  top: 100px;
   padding: 10px;
   background-color: #fff;
   z-index: 1;
+  right: 10px;
 }
 @media only screen and (max-width: 500px) {
   .cart {
