--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@ h1 {
   position: absolute;
   width: 100%;
   left: 0;
+  z-index: 1;
   height: 100%;
 }
 
@@ -62,6 +63,9 @@ h1 {
   width: 80%;
 }
 @media only screen and (max-width: 500px) {
+  .cart-add-remove {
+    gap: 30px !important;
+  }
   .text-content-container {
     padding: 20px;
   }
@@ -109,6 +113,12 @@ h1 {
 .add,
 .remove {
   cursor: pointer;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 50px;
 }
 
 .cart-add-remove {
@@ -117,7 +127,6 @@ h1 {
   justify-content: center;
   gap: 50px;
   background-color: #F7F8FD;
-  padding: 15px;
   border-radius: 10px;
 }
 
@@ -149,14 +158,17 @@ h1 {
 .cart {
   position: absolute;
   width: 250px;
-  border: 1px solid black;
+  border: 1px solid gray;
   text-align: center;
   top: 100px;
   padding: 10px;
   background-color: #fff;
   z-index: 1;
   right: 10px;
+  border-radius: 15px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+
 @media only screen and (max-width: 500px) {
   .cart {
     position: absolute;
@@ -164,7 +176,7 @@ h1 {
     border: 1px solid black;
     text-align: center;
     left: 0;
-    top: 122px;
+    top: 130px;
     padding: 10px;
     background-color: #fff;
     z-index: 1;
@@ -217,6 +229,7 @@ h1 {
 }
 
 .main-img {
+  cursor: pointer;
   width: 70%;
   border-radius: 20px;
 }
@@ -340,7 +353,7 @@ h1 {
 
 .add-to-cart {
   border-radius: 10px;
-  height: 48px;
+  height: 50px;
   width: 250px;
   border: none;
   background-color: #F07C3A;
